--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -81,11 +81,14 @@
             style="@style/TextViewLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="238dp"
+            android:layout_marginRight="238dp"
             android:text="Descripción"
             android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/emptyContainer"
             app:layout_constraintStart_toStartOf="@+id/emptyContainer"
             app:layout_constraintTop_toBottomOf="@+id/textDetailName" />
 
@@ -97,9 +100,9 @@
             android:layout_marginTop="24dp"
             android:text="Nombre"
             android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/emptyContainer"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/emptyContainer"
             app:layout_constraintTop_toTopOf="@+id/emptyContainer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
